Fix Portal scrolling getting stuck (#4455)
* Fix Portal scrolling getting stuck

* DappCard container flex

* Container height to 100%

--- a/js/src/ui/Container/container.css
+++ b/js/src/ui/Container/container.css
@@ -23,10 +23,11 @@
 
 .compact,
 .padded {
+  background-color: transparent !important;
   border-radius: 0 !important;
+  height: 100%;
   position: relative;
   overflow: auto;
-  background-color: transparent !important;
 }
 
 .compact {
